# parallel.js

./: .babelrc  .editorconfig  .eslintcache  .eslintignore  .eslintrc  .flowconfig  .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SpecRunner.html  Worker.js  appveyor.yml  blob.js  bower.json  eval.js  index.html  my-worker.js  package.json  parallel.js  parallel.min.js  renovate.json  test.js  url.js  worker.js
css/: examples.css  html.css
flow-typed/npm/: babel-plugin-module-alias_vx.x.x.js  babel-plugin-syntax-flow_vx.x.x.js  babel-plugin-tcomb_vx.x.x.js  babel-plugin-transform-remove-console_vx.x.x.js  babel-plugin-transform-remove-debugger_vx.x.x.js  babel-plugin-transform-runtime_vx.x.x.js  eslint-nibble-ignore_vx.x.x.js  eslint-plugin-flowtype-errors_vx.x.x.js  eslint-plugin-flowtype_vx.x.x.js  eslint-plugin-fp_vx.x.x.js  eslint-plugin-jsx-a11y_vx.x.x.js  eslint-plugin-react_vx.x.x.js  eslint_vx.x.x.js  jasmine-node_vx.x.x.js  q_vx.x.x.js
js/: main.js  parallel.js  tracking.js
lib/: Worker.js  eval.js  index.js  parallel.js  parallel.min.js  thread.js
native/: Cargo.toml
samples/: map.html  reduce.html  spawn.html
spec/: api.spec.js  eval.spec.js  worker.spec.js
test/: api.spec.js  basic.spec.js  eval.spec.js  operations.spec.js  performance.spec.js  q-api.spec.js  runner.js  test.js  worker.spec.js
test/jasmine/: jasmine-html.js  jasmine.js  jasmine.tap_reporter.js
test/specs/: api.spec.js  eval.spec.js  operations.spec.js  performance.spec.js  q-api.spec.js  regressions.spec.js  (+1 more)
tests/: ParallelSpec.js
